[G4] 9935. 문자열 폭발 - Deque로 구현